@@ -1,5 +1,9 @@
 2014-01-27  Jason Merrill  <jason@redhat.com>
 
+	PR c++/59097
+	* decl.c (compute_array_index_type): Don't call
+	maybe_constant_value for a non-integral expression.
+
 	PR c++/58965
 	* mangle.c (write_guarded_var_name): Handle null DECL_NAME.
 
